# FIUBA-programacion-concurrente

./: .gitignore  README.md
PARCIALES/1C-2024/: 1c2024.md
PARCIALES/2024/: 1c2024.txt  2c2023 (practica).txt
PARCIALES/examenes_tercera_tanda/en markdown/: Técnicas de Programación Concurrente 13b9a8e5b435804897bfed57bfb965e6.txt
RESUMENES/: RESUMEN - PABLO ANDRES DEALBERA.apkg
TP GRUPAL/: README.md
TP GRUPAL/tp-grupal-alandavies/: README.md  config.toml
TP GRUPAL/tp-grupal-alandavies/pedidos-rust/: Cargo.toml
TP GRUPAL/tp-grupal-alandavies/pedidos-rust/src/: error.rs  lib.rs
TP GRUPAL/tp-grupal-alandavies/pedidos-rust/src/app_config/: componente.rs  componente_con_puerto.rs  componente_con_rango.rs  componente_con_string.rs  config.rs  deserialize_ip.rs  error.rs  mod.rs
TP GRUPAL/tp-grupal-alandavies/pedidos-rust/src/args_parser/: args.rs  error.rs
TP GRUPAL/tp-grupal-alandavies/pedidos-rust/src/comensales/: comensal.rs  mod.rs  nodo_comensal.rs  udp_oyente.rs
TP GRUPAL/tp-grupal-alandavies/pedidos-rust/src/estructuras_aux/: estado_pedido.rs  mod.rs  pedido.rs  ubicacion.rs
TP GRUPAL/tp-grupal-alandavies/pedidos-rust/src/gateway_pagos/: args.rs  mod.rs  pagos.rs  tcp_oyente.rs
TP GRUPAL/tp-grupal-alandavies/pedidos-rust/src/logger/: log.rs
TP GRUPAL/tp-grupal-alandavies/pedidos-rust/src/mensajes/: aceptar_pedido.rs  actualizar_siguiente.rs  addr_nodo.rs  agrega_pedido_en_curso.rs  cambiar_siguiente.rs  cobrar.rs  eliminar_peido_en_curso.rs  info_lider.rs  info_pedido_en_curso.rs  info_repartidor_pedido.rs  info_restaurante_pedido.rs  info_restaurantes.rs  info_restaurantes_interno.rs  intento_pago.rs  keep_alive.rs  llego_pedido.rs  mcode.rs  mod.rs  obtener_ubicacion.rs  ofrecer_pedido.rs  opcode_recibido.rs  pago_autorizado.rs  pago_rechazado.rs  pedido_a_cocinar.rs  pedido_asignado_a_otro.rs  pedido_asignado_a_vos.rs  pedido_autorizado.rs  pedido_entregado.rs  pedido_listo.rs  pedido_tomado.rs  pedidos_en_curso_repartidores.rs  pedir.rs  progreso_pedido.rs  quitar_pedido_de_buffer.rs  ring_election.rs  solicitar_pedido_en_curso.rs  solicitar_pedidos.rs  ver_restaurantes.rs  ver_restaurantes_interno.rs
TP GRUPAL/tp-grupal-alandavies/pedidos-rust/src/repartidores/: mod.rs  nodo_repartidor.rs  repartidor.rs  tcp_oyente.rs
TP GRUPAL/tp-grupal-alandavies/pedidos-rust/src/restaurantes/: cocina.rs  mod.rs  nodo_restaurante.rs  restaurante.rs  tcp_oyente.rs
TP GRUPAL/tp-grupal-mslepowron/: README.md  test_eleccion_lider.py
TP GRUPAL/tp-grupal-mslepowron/app_utils/: Cargo.toml
TP GRUPAL/tp-grupal-mslepowron/app_utils/src/: constants.rs  lib.rs  payment_type.rs  utils.rs
TP GRUPAL/tp-grupal-mslepowron/customer/: Cargo.toml  client_Agus.json  client_Mechi.json
TP GRUPAL/tp-grupal-mslepowron/delivery_man/: Cargo.toml
TP GRUPAL/tp-grupal-mslepowron/gateway/: Cargo.toml
TP GRUPAL/tp-grupal-mslepowron/gateway/src/: customer_sender.rs  gateway.rs  lib.rs  main.rs  messages.rs
TP GRUPAL/tp-grupal-mslepowron/order/: Cargo.toml
TP GRUPAL/tp-grupal-mslepowron/order/src/: lib.rs  order.rs
TP GRUPAL/tp-grupal-mslepowron/restaurant/: Cargo.toml  rest_Mcdonalds.json  (+1 more)
TP GRUPAL/tp-grupal-sevitz/ConcuRide-main/common/: Cargo.toml
TP GRUPAL/tp-grupal-sevitz/ConcuRide-main/common/src/: messages.rs  payment_messages.rs
TP GRUPAL/tp-grupal-sevitz/admin/: Cargo.toml
TP GRUPAL/tp-grupal-sevitz/admin/src/: main.rs
TP GRUPAL/tp-grupal-sevitz/admin/src/admin_actor/: admin.rs  coord_to_admin.rs  reaper.rs
TP GRUPAL/tp-grupal-sevitz/admin/src/elections/: election_messages.rs
TP GRUPAL/tp-grupal-sevitz/admin/src/storage_actor/: storage.rs  storage_handlers.rs
TP GRUPAL/tp-grupal-sevitz/admin/src/utils/: consts.rs  logs.rs  mod.rs  payment_actions.rs
TP GRUPAL/tp-grupal-sevitz/passenger/: Cargo.toml
TP GRUPAL/tp-grupal-sevitz/payment/: Cargo.toml
TP GRUPAL/tp-grupal-sevitz/payment/src/: main.rs  payment_gateway.rs
TP INDIVIDUAL/tp-individual-mslepowron/: Cargo.toml  README.md  expected_output.json  salida.json  test_salida.json
TP1/: README.MD
(+77 files in other folders)
