[package]
name = "app_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.22"
tokio = { version = "^1", features = ["full"] }
tokio-stream = { version = "^0.1.14", features = ["io-util"] }
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
thiserror = "1.0.66"