[package]
name = "order"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "^1", features = ["full"] }
tokio-stream = { version = "^0.1.14", features = ["io-util"] }
actix = "0.13.5"
actix-rt = "2.0" # <-- Runtime for actix
actix_async_handler = "0.1.0"
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.132"
server = {path = "../server"}
app_utils = { path = "../app_utils" }
gateway = { path = "../gateway" }