[package]
name = "passenger"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "^0.1.14", features = ["io-util"] }
actix = "0.13.5"
actix_async_handler = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
