[package]
name = "payment"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = { version = "^0.1.16", features = ["io-util"] }
actix = "0.13.5"
actix-rt = "2.0"

