[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
actix = "0.13.5"
actix-rt = "2.0" # <-- Runtime for actix
console-subscriber = { git = "https://github.com/tokio-rs/console.git" }
ntest = "*"
futures-channel = "*"
tokio = "*"
tokio-stream = "0.1"
actix_async_handler = "0.1.0"